Remove SVG img tag that may be causing avatar.jpg 404 error, replace with Unicode icon

--- a/index.html
+++ b/index.html
@@ -2118,7 +2118,9 @@
                         </div>
                         <div class="user-dropdown">
                             <div class="user-dropdown-toggle">
-                                <img src="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ccc'%3e%3ccircle cx='12' cy='8' r='4'/%3e%3cpath d='M20 20c0 2.2-1.8 4-4 4H8c-2.2 0-4-1.8-4-4V18c0-2.2 1.8-4 4-4h8c2.2 0 4 1.8 4 4v2z'/%3e%3c/svg%3e" alt="User" />
+                                <div class="user-avatar-small">
+                                    <i class="icon-user"></i>
+                                </div>
                                 <span>Admin</span>
                                 <i class="icon-chevron-down"></i>
                             </div>
