Add debugging styles: blue borders on sidebar/content, background on dashboard, simplified Unicode icons

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
         .icon-calculator:before { content: "🧮"; font-family: Arial, sans-serif; }
         .icon-user:before { content: "👤"; font-family: Arial, sans-serif; }
         .icon-lock:before { content: "🔒"; font-family: Arial, sans-serif; }
-        .icon-eye:before { content: "👁️"; font-family: Arial, sans-serif; }
+        .icon-eye:before { content: "👁"; font-family: Arial, sans-serif; }
         .icon-eye-slash:before { content: "🙈"; font-family: Arial, sans-serif; }
         .icon-sign-in:before { content: "→"; font-family: Arial, sans-serif; }
-        .icon-exclamation:before { content: "⚠️"; font-family: Arial, sans-serif; }
+        .icon-exclamation:before { content: "⚠"; font-family: Arial, sans-serif; }
         .icon-tachometer:before { content: "📊"; font-family: Arial, sans-serif; }
         .icon-users:before { content: "👥"; font-family: Arial, sans-serif; }
         .icon-calendar:before { content: "📅"; font-family: Arial, sans-serif; }
         .icon-money:before { content: "💰"; font-family: Arial, sans-serif; }
         .icon-chart:before { content: "📈"; font-family: Arial, sans-serif; }
-        .icon-cog:before { content: "⚙️"; font-family: Arial, sans-serif; }
+        .icon-cog:before { content: "⚙"; font-family: Arial, sans-serif; }
         .icon-bars:before { content: "☰"; font-family: Arial, sans-serif; }
         .icon-search:before { content: "🔍"; font-family: Arial, sans-serif; }
         .icon-bell:before { content: "🔔"; font-family: Arial, sans-serif; }
@@ -32,8 +32,8 @@
         .icon-check:before { content: "✓"; font-family: Arial, sans-serif; }
         .icon-times:before { content: "✗"; font-family: Arial, sans-serif; }
         .icon-plus:before { content: "+"; font-family: Arial, sans-serif; }
-        .icon-edit:before { content: "✏️"; font-family: Arial, sans-serif; }
-        .icon-trash:before { content: "🗑️"; font-family: Arial, sans-serif; }
+        .icon-edit:before { content: "✏"; font-family: Arial, sans-serif; }
+        .icon-trash:before { content: "🗑"; font-family: Arial, sans-serif; }
 
         /* Reset and Base Styles */
         * {
@@ -2132,8 +2132,8 @@
                 </div>
                 <div class="content-wrapper">
                     <!-- Dashboard -->
-                    <div id="dashboard" class="page-content">
-                        <div class="dashboard-stats">
+                    <div id="dashboard" class="page-content" style="background-color: #ffffff; border: 1px solid #ddd; padding: 20px; margin: 10px;">
+                        <h1 style="color: #2c3e50; margin-bottom: 20px;">Dashboard</h1>
                             <div class="stat-card total-workers">
                                 <div class="stat-header">
                                     <i class="icon-users"></i>
